# lighthouse-aggregator

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: aggregator_test.rs
tests/fixtures/: google-score-test-1.json  google-score-test-2.json
